# basic_cmake_project

./: CMakeLists.txt  README.md
include/: base_project.hpp
src/: main.cpp
